[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Fonts/moiktext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Screens/Inventory/item-window.png" type="Texture" id=2]
[ext_resource path="res://assets/Screens/Inventory/empty.png" type="Texture" id=3]
[ext_resource path="res://src/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/Items/key_outline.png" type="Texture" id=5]
[ext_resource path="res://assets/Items/inventory.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.807843, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.243137, 0.701961, 0.72549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.211765, 0.588235, 0.607843, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=6]
resource_name = "grow"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PrimaryWindow/Weapon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1.45, 1.45 ), Vector2( 1.1, 1.1 ) ]
}

[node name="HUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -237.488
margin_top = -256.573
margin_right = -67.488
margin_bottom = -205.573
custom_fonts/font = SubResource( 1 )
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="ProgressBar" parent="."]
margin_left = -5.0
margin_top = -255.0
margin_right = 162.0
margin_bottom = -213.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMessage" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.86
margin_top = -142.252
margin_right = 138.14
margin_bottom = -91.2516
custom_fonts/font = SubResource( 1 )
text = "End Message"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
visible = false
margin_left = -76.368
margin_top = 72.293
margin_right = 75.632
margin_bottom = 114.293
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Return To Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondaryWindow" type="Sprite" parent="."]
position = Vector2( 404.195, 201.512 )
texture = ExtResource( 2 )

[node name="Weapon" type="Sprite" parent="SecondaryWindow"]
position = Vector2( 0.0927124, 0.7677 )
texture = ExtResource( 3 )

[node name="PrimaryWindow" type="Sprite" parent="."]
position = Vector2( 294.195, 201.512 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="Weapon" type="Sprite" parent="PrimaryWindow"]
position = Vector2( -0.221558, 0.0847931 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="KeyLogo" type="Sprite" parent="."]
position = Vector2( 61.6926, 199.141 )
texture = ExtResource( 5 )

[node name="KeyLabel" type="Label" parent="."]
margin_left = 93.1643
margin_top = 184.084
margin_right = 151.164
margin_bottom = 235.084
custom_fonts/font = SubResource( 1 )
text = "x0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" type="Sprite" parent="."]
position = Vector2( -409, -240 )
texture = ExtResource( 6 )

[node name="PrimaryAnimation" type="AnimationPlayer" parent="."]
anims/grow = SubResource( 6 )

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
